--- a/performance_prediction.ipynb
+++ b/performance_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score,r2_score,mean_squared_error,mean_absolute_error\n"
    ]
   },
   {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
        "20"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,6 +335,289 @@
    "source": [
     "student_dataset_full = student_dataset[(student_dataset['avg_score']<=100) & (student_dataset['avg_score']>=96)]['race_ethnicity'].count()\n",
     "student_dataset_full"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X=student_dataset.drop(columns=['math_score','total_score','avg_score'],axis=1)\n",
+    "#X = df.drop(columns=['math_score'],axis=1)\n",
+    "Y=student_dataset['math_score']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_features = X.select_dtypes(exclude='object').columns\n",
+    "ob_features = X.select_dtypes(include='object').columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder,StandardScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "num_transformer = StandardScaler()\n",
+    "OH_transformer = OneHotEncoder()\n",
+    "preprocessor = ColumnTransformer(\n",
+    "    [\n",
+    "        (\"OneHotEncoder\",num_transformer,num_features),\n",
+    "        (\"StandardScalar\",OH_transformer,ob_features)\n",
+    "    ]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.19399858,  0.39149181,  1.        , ...,  1.        ,\n",
+       "         0.        ,  1.        ],\n",
+       "       [ 1.42747598,  1.31326868,  1.        , ...,  1.        ,\n",
+       "         1.        ,  0.        ],\n",
+       "       [ 1.77010859,  1.64247471,  1.        , ...,  1.        ,\n",
+       "         0.        ,  1.        ],\n",
+       "       ...,\n",
+       "       [ 0.12547206, -0.20107904,  1.        , ...,  0.        ,\n",
+       "         1.        ,  0.        ],\n",
+       "       [ 0.60515772,  0.58901542,  1.        , ...,  1.        ,\n",
+       "         1.        ,  0.        ],\n",
+       "       [ 1.15336989,  1.18158627,  1.        , ...,  0.        ,\n",
+       "         0.        ,  1.        ]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X=preprocessor.fit_transform(X)\n",
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((800, 19), (200, 19))"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,Y,test_size=0.2,random_state=42)\n",
+    "X_train.shape, X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_model(true, predicted):\n",
+    "    mae = mean_absolute_error(true, predicted)\n",
+    "    mse = mean_squared_error(true, predicted)\n",
+    "    rmse = np.sqrt(mean_squared_error(true, predicted))\n",
+    "    r2_square = r2_score(true, predicted)\n",
+    "    return mae, rmse, r2_square"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear Regression\n",
+      "Model performance for Training set\n",
+      "- Root Mean Squared Error: 5.3231\n",
+      "- Mean Absolute Error: 4.2667\n",
+      "- R2 Score: 0.8743\n",
+      "----------------------------------\n",
+      "Model performance for Test set\n",
+      "- Root Mean Squared Error: 5.3940\n",
+      "- Mean Absolute Error: 4.2148\n",
+      "- R2 Score: 0.8804\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "Lasso\n",
+      "Model performance for Training set\n",
+      "- Root Mean Squared Error: 6.5938\n",
+      "- Mean Absolute Error: 5.2063\n",
+      "- R2 Score: 0.8071\n",
+      "----------------------------------\n",
+      "Model performance for Test set\n",
+      "- Root Mean Squared Error: 6.5197\n",
+      "- Mean Absolute Error: 5.1579\n",
+      "- R2 Score: 0.8253\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "Ridge\n",
+      "Model performance for Training set\n",
+      "- Root Mean Squared Error: 5.3233\n",
+      "- Mean Absolute Error: 4.2650\n",
+      "- R2 Score: 0.8743\n",
+      "----------------------------------\n",
+      "Model performance for Test set\n",
+      "- Root Mean Squared Error: 5.3904\n",
+      "- Mean Absolute Error: 4.2111\n",
+      "- R2 Score: 0.8806\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "K-Neighbors Regressor\n",
+      "Model performance for Training set\n",
+      "- Root Mean Squared Error: 5.7128\n",
+      "- Mean Absolute Error: 4.5168\n",
+      "- R2 Score: 0.8552\n",
+      "----------------------------------\n",
+      "Model performance for Test set\n",
+      "- Root Mean Squared Error: 7.2538\n",
+      "- Mean Absolute Error: 5.6190\n",
+      "- R2 Score: 0.7838\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "Decision Tree\n",
+      "Model performance for Training set\n",
+      "- Root Mean Squared Error: 0.2795\n",
+      "- Mean Absolute Error: 0.0187\n",
+      "- R2 Score: 0.9997\n",
+      "----------------------------------\n",
+      "Model performance for Test set\n",
+      "- Root Mean Squared Error: 7.8016\n",
+      "- Mean Absolute Error: 6.1850\n",
+      "- R2 Score: 0.7499\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "Random Forest Regressor\n",
+      "Model performance for Training set\n",
+      "- Root Mean Squared Error: 2.3267\n",
+      "- Mean Absolute Error: 1.8314\n",
+      "- R2 Score: 0.9760\n",
+      "----------------------------------\n",
+      "Model performance for Test set\n",
+      "- Root Mean Squared Error: 6.0496\n",
+      "- Mean Absolute Error: 4.6632\n",
+      "- R2 Score: 0.8496\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "XGBRegressor\n",
+      "Model performance for Training set\n",
+      "- Root Mean Squared Error: 1.0073\n",
+      "- Mean Absolute Error: 0.6875\n",
+      "- R2 Score: 0.9955\n",
+      "----------------------------------\n",
+      "Model performance for Test set\n",
+      "- Root Mean Squared Error: 6.5958\n",
+      "- Mean Absolute Error: 5.1036\n",
+      "- R2 Score: 0.8212\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "AdaBoost Regressor\n",
+      "Model performance for Training set\n",
+      "- Root Mean Squared Error: 5.8072\n",
+      "- Mean Absolute Error: 4.7499\n",
+      "- R2 Score: 0.8504\n",
+      "----------------------------------\n",
+      "Model performance for Test set\n",
+      "- Root Mean Squared Error: 6.0871\n",
+      "- Mean Absolute Error: 4.6973\n",
+      "- R2 Score: 0.8477\n",
+      "===================================\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsRegressor\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor,AdaBoostRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.linear_model import LinearRegression, Ridge,Lasso\n",
+    "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "#from catboost import CatBoostRegressor\n",
+    "from xgboost import XGBRegressor\n",
+    "import warnings\n",
+    "models = {\n",
+    "    \"Linear Regression\": LinearRegression(),\n",
+    "    \"Lasso\": Lasso(),\n",
+    "    \"Ridge\": Ridge(),\n",
+    "    \"K-Neighbors Regressor\": KNeighborsRegressor(),\n",
+    "    \"Decision Tree\": DecisionTreeRegressor(),\n",
+    "    \"Random Forest Regressor\": RandomForestRegressor(),\n",
+    "    \"XGBRegressor\": XGBRegressor(), \n",
+    "   # \"CatBoosting Regressor\": CatBoostRegressor(verbose=False),\n",
+    "    \"AdaBoost Regressor\": AdaBoostRegressor()\n",
+    "}\n",
+    "model_list = []\n",
+    "r2_list =[]\n",
+    "\n",
+    "for i in range(len(list(models))):\n",
+    "    model = list(models.values())[i]\n",
+    "    model.fit(X_train, y_train) # Train model\n",
+    "\n",
+    "    # Make predictions\n",
+    "    y_train_pred = model.predict(X_train)\n",
+    "    y_test_pred = model.predict(X_test)\n",
+    "    \n",
+    "    # Evaluate Train and Test dataset\n",
+    "    model_train_mae , model_train_rmse, model_train_r2 = evaluate_model(y_train, y_train_pred)\n",
+    "\n",
+    "    model_test_mae , model_test_rmse, model_test_r2 = evaluate_model(y_test, y_test_pred)\n",
+    "\n",
+    "    \n",
+    "    print(list(models.keys())[i])\n",
+    "    model_list.append(list(models.keys())[i])\n",
+    "    \n",
+    "    print('Model performance for Training set')\n",
+    "    print(\"- Root Mean Squared Error: {:.4f}\".format(model_train_rmse))\n",
+    "    print(\"- Mean Absolute Error: {:.4f}\".format(model_train_mae))\n",
+    "    print(\"- R2 Score: {:.4f}\".format(model_train_r2))\n",
+    "\n",
+    "    print('----------------------------------')\n",
+    "    \n",
+    "    print('Model performance for Test set')\n",
+    "    print(\"- Root Mean Squared Error: {:.4f}\".format(model_test_rmse))\n",
+    "    print(\"- Mean Absolute Error: {:.4f}\".format(model_test_mae))\n",
+    "    print(\"- R2 Score: {:.4f}\".format(model_test_r2))\n",
+    "    r2_list.append(model_test_r2)\n",
+    "    \n",
+    "    print('='*35)\n",
+    "    print('\\n')"
    ]
   }
  ],
